<resources>
    <string name="app_name">Fuelex</string>
    <string name="username">Username</string>
    <string name="pw">Password</string>
    <string name="ftype">Select Fuel Type</string>
    <string name="FArrival">Fuel Arrival</string>

    <string name="FFinish">Fuel Finish</string>
    <string name="efat">Enter Fuel Arrival Time</string>
    <string name="efft">Enter Fuel Finish Time</string>

    <string name="find_fuel_headline">Find Nearest Stations</string>
    <string name="find_loc">Enter Location</string>
    <string name="station_head">Location 01</string>
    <string name="available_type_head">Available Fuel Types</string>
    <string name="qty_available">Available Quantity : </string>
    <string name="nxtArrivalTime">Arrival Time : </string>
    <string name="goToQueueBtnText">Show me the Queue</string>
    <string name="unitLiter">Litre</string>
    <string name="queueViewHeadDash"> - </string>
    <string name="queueViewHeadText">Queue</string>
    <string name="avgWaitTime">Average waiting time</string>
    <string name="currCountTxt">Current Queue Length : </string>
    <string name="beforeLeaveTxt">Leave before pump fuel : </string>
    <string name="afterLeaveTxt">Leave after pump fuel : </string>
    <string name="waitQueue">I will wait at this Queue</string>
    <string name="queueGoBack">Take me back</string>
    <string name="JoinQueue">I Joined The Queue</string>
    <string name="LeaveAfterPump">Leaving After Pumping Fuel</string>
    <string name="LeaveBeforePump">Leaving Before Pumping Fuel</string>
    <string name="serachBarTxt">Search Location</string>
    <string name="showQBtn">Go to Queue</string>
</resources>