<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QueueView">

    <TextView
        android:id="@+id/id_CurCountInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:text="textview"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_QueueViewHeadLocationInput"
        android:layout_width="77dp"
        android:layout_height="26dp"
        android:text="txt"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_QueueViewHeadLocationInput2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/id_QueueViewHeadLocationInput2"
        android:layout_width="23dp"
        android:layout_height="28dp"
        android:layout_marginEnd="124dp"
        android:text="@string/queueViewHeadDash"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_QueueViewHeadFuelTypeInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/id_QueueViewHeadLocationInput" />

    <TextView
        android:id="@+id/id_QueueViewHeadFuelTypeInput"
        android:layout_width="116dp"
        android:layout_height="28dp"
        android:text="type"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_QueueViewHeadFuelTypeInput2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/id_QueueViewHeadLocationInput2" />

    <TextView
        android:id="@+id/id_QueueViewHeadFuelTypeInput2"
        android:layout_width="72dp"
        android:layout_height="27dp"
        android:layout_marginTop="104dp"
        android:text="@string/queueViewHeadText"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/id_QueueViewHeadFuelTypeInput"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_AvgTimeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/avgWaitTime"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_QueueStatusInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="476dp"
        android:lineSpacingExtra="60sp"
        android:text="sample txt"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_CurCountTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currCountTxt"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_CurCountInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/id_AvgTimeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_AvgTimeTxt" />

    <Button
        android:id="@+id/id_BtnStayInQueue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="612dp"
        android:text="@string/waitQueue"
        app:layout_constraintEnd_toStartOf="@+id/id_btnQueueBack"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_btnQueueBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="612dp"
        android:layout_marginEnd="8dp"
        android:text="@string/queueGoBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_BeforeLeaveInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="136dp"
        android:text="textview"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_CurCountInput" />

    <TextView
        android:id="@+id/id_AfterTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/afterLeaveTxt"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_AfterLeaveInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/id_BeforeLeaveTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beforeLeaveTxt"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_BeforeLeaveInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/id_AfterLeaveInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="136dp"
        android:text="textview"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_BeforeLeaveInput" />

</androidx.constraintlayout.widget.ConstraintLayout>