<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FuelList">

    <TextView
        android:id="@+id/id_FuelNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:text="TextView"
        android:textColor="#5957BC"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_QtyInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_LiterTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toEndOf="@+id/id_QuantityAvailableTxt" />

    <TextView
        android:id="@+id/id_ArrTimeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="104dp"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toEndOf="@+id/id_ArrivalTimeTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_LiterTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="72dp"
        android:hint="@string/unitLiter"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_ArrivalTimeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="140dp"
        android:text="@string/nxtArrivalTime"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_ArrTimeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_QuantityAvailableTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/qty_available"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_QtyInput"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/id_BtnGoToQueue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="20dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_5" />

    <TextView
        android:id="@+id/btnTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showQBtn"
        android:textColor="#FFFFFF"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/id_BtnGoToQueue"
        app:layout_constraintEnd_toEndOf="@+id/id_BtnGoToQueue"
        app:layout_constraintStart_toStartOf="@+id/id_BtnGoToQueue"
        app:layout_constraintTop_toTopOf="@+id/id_BtnGoToQueue" />

</androidx.constraintlayout.widget.ConstraintLayout>